<resources>
    <string name="app_name">ChatApp</string>

    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_up_click_hear">Sign up? Click here</string>
    <string name="back_to_login_page">Back to login? Click here</string>
    <string name="sign_up">Sign up</string>
    <string name="send">Send</string>
    <string name="forgot_password_textview">Please enter your email below and push send to reset
    your password.</string>
    <string name="forgot_your_password_press_here">Forgot your password? Press here</string>
    <string name="username">Username</string>
    <string name="show_password_checkbox">Show/Hide Password</string>
    <string name="sign_out">Sign out</string>
    <string name="start_camera">Start camera</string>
    <string name="cancel">Cancel</string>
    <string name="new_message">New message</string>
    <string name="create_group">Make a new group</string>
    <string name="contacts_title">CONTACTS</string>
    <string name="back">Back</string>
    <string name="new_group">New group</string>
    <string name="next">Next</string>
    <string name="nickname">Change Nickname</string>
    <string name="edit_nickname">Edit nickname</string>
    <string name="edit_nickname_info">This change will only be visible for you on this phone.</string>
    <string name="save">Save</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
