<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".Activitys.LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="249dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:src="@mipmap/chatapplogo3" />


    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/email"
            android:textColor="@color/text_white"
            android:textColorHint="@color/text_white" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_email"
            android:layout_marginTop="40dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/text_white"
            android:textColorHint="@color/text_white" />

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_password"
            android:buttonTint="@color/text_white"
            android:text="@string/show_password_checkbox"
            android:textColor="@color/text_white" />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkbox"
            android:onClick="forgotPassword"
            android:text="@string/forgot_your_password_press_here"
            android:textColor="@color/text_white" />

    </RelativeLayout>

    <Button
        android:id="@+id/button_login"
        android:layout_width="204dp"
        android:layout_height="29dp"
        android:layout_below="@id/relative"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@color/colorPrimary"
        android:onClick="loginProses"
        android:text="@string/login"
        android:textColor="@color/text_white" />

    <TextView
        android:id="@+id/text_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="toSignUp"
        android:text="@string/sign_up_click_hear"
        android:textColor="@color/text_white" />


</RelativeLayout>

