<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity"
    android:background="@color/colorPrimaryDark">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="249dp"
        android:src="@mipmap/chatapplogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginTop="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/forgot_password_textview"
        android:textColor="@color/text_white"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/forgot_password_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgot_password"
        android:layout_marginTop="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/text_white"
        android:hint="@string/email"
        android:textColorHint="@color/text_white"/>

    <Button
        android:id="@+id/button_send"
        android:layout_width="204dp"
        android:layout_height="29dp"
        android:layout_below="@id/forgot_password_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@color/colorPrimary"
        android:text="@string/send"
        android:onClick="resetPasswordPressed"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/back_to_login_page"
        android:textColor="@color/text_white"
        android:layout_below="@+id/button_send"
        android:layout_marginTop="12dp"
        android:onClick="backToLogin"/>


</RelativeLayout>