<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/text_white"
    tools:context=".Activitys.NewMessage">

    <TextView
        android:id="@+id/cancel_new_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/cancel"
        android:textSize="14sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/title_new_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/new_message"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_new_message"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/cancel_new_message"
        android:background="@color/lightGrey"/>

    <RelativeLayout
        android:id="@+id/new_group_clickable_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_new_message"
        android:orientation="horizontal"
        android:clickable="true"
        android:focusable="true">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/group_icon_new_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:background="@drawable/ic_group_white_24dp"
            android:backgroundTint="@color/black"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/make_group_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/group_icon_new_message"
            android:layout_marginStart="15dp"
            android:text="@string/create_group"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_centerVertical="true"
            android:padding="15dp"/>

        <ImageView
            android:id="@+id/make_group_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="15dp"
            android:background="@drawable/ic_keyboard_arrow_right_black_24dp"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/contacts_title_new_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/new_group_clickable_area"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/contacts_title"
        android:textSize="12sp"
        android:textStyle="bold"
        android:paddingStart="15dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/contacts_new_message"
        app:layout_constraintTop_toBottomOf="@id/contacts_title_new_message"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>